@@ -37,6 +37,9 @@ s3service.s3-endpoint-http-port=80
 s3service.s3-endpoint-https-port=443
 s3service.disable-dns-buckets=false
 
+# Virtual path for non-standard servers, such as Eucalyptus
+#s3service.s3-endpoint-virtual-path=
+
 #s3service.ignore-exceptions-in-multi=false
 
 ###
